infra/sparky-fitness/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparky-fitness-server
  namespace: sparky-fitness
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sparky-fitness-server
  template:
    metadata:
      labels:
        app: sparky-fitness-server
    spec:
      containers:
        - name: sparky-fitness-server
          image: codewithcj/sparkyfitness_server:v0.15.9.9
          ports:
            - containerPort: 3010
          volumeMounts:
            - name: backup-data
              mountPath: /app/SparkyFitnessServer/backup
            - name: uploads-data
              mountPath: /app/SparkyFitnessServer/uploads
      volumes:
        - name: backup-data
          persistentVolumeClaim:
            claimName: sparky-fitness-server-backup-data
        - name: uploads-data
          persistentVolumeClaim:
            claimName: sparky-fitness-server-uploads-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparky-fitness-frontend
  namespace: sparky-fitness
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sparky-fitness-frontend
  template:
    metadata:
      labels:
        app: sparky-fitness-frontend
    spec:
      containers:
        - name: sparky-fitness-frontend
          image: codewithcj/sparkyfitness:v0.15.9.7
          ports:
            - containerPort: 80
