infra/sparky-fitness/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sparky-fitness
  namespace: sparky-fitness
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - "sparky.monederobox.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: sparky-fitness-frontend
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
